--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "Jojo Ortiz",
   "license": "UNLICENSED",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon --watch server ./server/app.js"
+    "test": "npx jest",
+    "start": "npx nodemon --watch server ./server/app.js",
+    "build-db": "psql -U joseortiz -a -f server/schema.sql",
+    "build-test-db": "psql -U joseortiz -a -f test/schema_test.sql"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,12 @@
   },
   "homepage": "https://github.com/SDC-Peach/Reviews-API-Service#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "jest": "^29.2.2"
   }
 }
